Hopefully you see something tomorrow

--- a/xsh/fashionMNIST_stats.ipynb
+++ b/xsh/fashionMNIST_stats.ipynb
@@ -472,19 +472,28 @@
     {
       "cell_type": "code",
       "source": [
-        "from __future__ import print_function\n",
-        "import time\n",
-        "from sklearn.decomposition import PCA\n",
-        "from sklearn.manifold import TSNE\n",
-        "from sklearn import decomposition\n",
-        "%matplotlib inline\n",
-        "from mpl_toolkits.mplot3d import Axes3D\n",
-        "import seaborn as sns"
+        "# from __future__ import print_function\n",
+        "# import time\n",
+        "# from sklearn.decomposition import PCA\n",
+        "# from sklearn.manifold import TSNE\n",
+        "# from sklearn import decomposition\n",
+        "# %matplotlib inline\n",
+        "# from mpl_toolkits.mplot3d import Axes3D\n",
+        "# import seaborn as sns\n",
+        "# features = ['pixel' + str(i+1) for i in range(traindata.shape[1]) ]\n",
+        "# pca_df = pd.DataFrame(traindata, columns=features)\n",
+        "\n",
+        "# pca_df['label'] = train_labels\n",
+        "# pca_df = pca_df.drop('pixel785', axis=1)\n",
+        "# print('Size of the dataframe: {}'.format(pca_df.shape))\n",
+        "# pca_df.head()\n",
+        "# for i in range(pca_df.shape[0]):\n",
+        ""
       ],
       "metadata": {
         "id": "1G1HsPv2gqCE"
       },
-      "execution_count": 23,
+      "execution_count": 32,
       "outputs": []
     }
   ]
