Save Random Forest

--- a/xsh/fashionMNIST_stats.ipynb
+++ b/xsh/fashionMNIST_stats.ipynb
@@ -2784,6 +2784,20 @@
     {
       "cell_type": "code",
       "source": [
+        "import pickle\n",
+        "\n",
+        "filename = 'randomForestClassifier'\n",
+        "pickle.dump(randomForest,  open(filename, 'wb'))"
+      ],
+      "metadata": {
+        "id": "2CT4KD3L5yXs"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.ensemble import GradientBoostingClassifier"
       ],
       "metadata": {
